base-template/v1beta1-ingress/vankeservice/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: demo-app
spec:
  tls:
    - hosts:
        - demo.vankeservice.com
      secretName: vankeservice.com-tls
  rules:
    # eg  www.vankeservice.com
    - host: demo.vankeservice.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: demo-app
              servicePort: http
